--- a/level2/f256/cmds/makefile
+++ b/level2/f256/cmds/makefile
@@ -22,7 +22,7 @@ BF      = bf
 CPM     = cpm
 CMDS_DW = inetd dw telnet httpd
 
-CMDS		= $(STD_CMDS_L2) fstatus mmap pmap proc smap xtclut drawtest \
+CMDS		= $(STD_CMDS_L2) fstatus mmap pmap proc smap xtclut drawtest fontest fontcmd fcfg \
 		$(CMDS_DW) $(BASIC09) $(BF) $(CPM) play \
 		bootos9 fnxinfo fnxreset rogue 
 
