Several Cmds rules
Include mergeln command in cmds
Define useful list of commands that will fit on the Flash cart

--- a/level2/f256/makefile
+++ b/level2/f256/makefile
@@ -30,8 +30,7 @@ DSKSD_F256JR		= $(DISTROVER)jr_sd.dsk
 DSKDW_F256JR		= $(DISTROVER)jr_dw.dsk
 DSKCART_F256JR          = $(DISTROVER)jr_cart.dsk
 
-#DSKS	= $(DSKSD_F256K) $(DSKDW_F256K) $(DSKSD_F256JR) $(DSKDW_F256JR) $(DSKCART_F256JR)
-DSKS	= $(DSKSD_F256JR) $(DSKCART_F256JR)
+DSKS	= $(DSKSD_F256K) $(DSKDW_F256K) $(DSKSD_F256JR) $(DSKDW_F256JR) $(DSKCART_F256JR)
 
 # Make all components
 all:
