Change FEU font to banner so that L2 doesn't need to include it.

--- a/level1/f256/feu/makefile
+++ b/level1/f256/feu/makefile
@@ -34,7 +34,7 @@ RBFNXSD	= $(MD)/llfnxsd.sb $(MD)/s0.dd
 SCF		 = $(MD)/scf.mn
 
 # Font & palette
-FONT		 = $(FNT)/phoenixegafont.sb
+FONT		 = $(FNT)/bannerfont.sb
 PALETTE	 = $(MD)/palette.sb
 
 # SCF video terminal
